--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
 
     defaultConfig {
         applicationId "org.bumbumapps.musicplayer"
-        versionName "2.0.1"
-        versionCode 2
+        versionName "2.1.2"
+        versionCode 4
 
         minSdkVersion 21
         targetSdkVersion 31
@@ -43,13 +43,13 @@ android {
     }
 }
 
-configurations {
-    ktlint
-}
-
-afterEvaluate {
-    preDebugBuild.dependsOn ktlintFormat
-}
+//configurations {
+//    ktlint
+//}
+//
+//afterEvaluate {
+//    preDebugBuild.dependsOn ktlintFormat
+//}
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -107,22 +107,22 @@ dependencies {
     // --- DEBUG ---
     implementation 'com.google.android.gms:play-services-ads:20.5.0'
     // Lint
-    ktlint 'com.pinterest:ktlint:0.43.2'
+//    ktlint 'com.pinterest:ktlint:0.43.2'
 }
 
-task ktlint(type: JavaExec, group: "verification") {
-    description = "Check Kotlin code style."
-    mainClass.set("com.pinterest.ktlint.Main")
-    classpath = configurations.ktlint
-
-    args "src/**/*.kt"
-}
-check.dependsOn ktlint
-
-task ktlintFormat(type: JavaExec, group: "formatting") {
-    description = "Fix Kotlin code style deviations."
-    mainClass.set("com.pinterest.ktlint.Main")
-    classpath = configurations.ktlint
-
-    args "-F", "src/**/*.kt"
-}
+//task ktlint(type: JavaExec, group: "verification") {
+//    description = "Check Kotlin code style."
+//    mainClass.set("com.pinterest.ktlint.Main")
+//    classpath = configurations.ktlint
+//
+//    args "src/**/*.kt"
+//}
+//check.dependsOn ktlint
+//
+//task ktlintFormat(type: JavaExec, group: "formatting") {
+//    description = "Fix Kotlin code style deviations."
+//    mainClass.set("com.pinterest.ktlint.Main")
+//    classpath = configurations.ktlint
+//
+//    args "-F", "src/**/*.kt"
+//}
