--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,18 @@
         android:name="org.bumbumapps.musicplayer.AuxioApp"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
-        android:icon="@drawable/musicplayer"
+        android:icon="@mipmap/app_logo"
         android:label="@string/info_app_name"
-        android:roundIcon="@drawable/musicplayer"
+        android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Auxio.App">
 
         <activity
             android:name="org.bumbumapps.musicplayer.MainActivity"
             android:exported="true"
-            android:icon="@drawable/musicplayer"
+            android:icon="@mipmap/app_logo"
             android:launchMode="singleTask"
-            android:roundIcon="@drawable/musicplayer"
+            android:roundIcon="@mipmap/app_logo_round"
             android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
@@ -53,8 +53,8 @@
         <service
             android:name="org.bumbumapps.musicplayer.playback.system.PlaybackService"
             android:foregroundServiceType="mediaPlayback"
-            android:icon="@drawable/musicplayer"
-            android:roundIcon="@drawable/musicplayer" />
+            android:icon="@mipmap/app_logo"
+            android:roundIcon="@mipmap/app_logo_round" />
 
         <receiver
             android:name="org.bumbumapps.musicplayer.widgets.WidgetProvider"
