--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,20 @@ apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin:  'com.google.gms.google-services'
+apply plugin:  'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "org.bumbumapps.musicplayer"
-        versionName "2.3.3"
-        versionCode 7
+        versionName "2.3.6"
+        versionCode 9
 
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         buildFeatures {
             dataBinding true
@@ -43,13 +45,7 @@ android {
     }
 }
 
-//configurations {
-//    ktlint
-//}
-//
-//afterEvaluate {
-//    preDebugBuild.dependsOn ktlintFormat
-//}
+
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -104,25 +100,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-rc01'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    // --- DEBUG ---
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+
+    // Add the dependencies for the Crashlytics and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.android.gms:play-services-ads:20.5.0'
-    // Lint
-//    ktlint 'com.pinterest:ktlint:0.43.2'
+
 }
 
-//task ktlint(type: JavaExec, group: "verification") {
-//    description = "Check Kotlin code style."
-//    mainClass.set("com.pinterest.ktlint.Main")
-//    classpath = configurations.ktlint
-//
-//    args "src/**/*.kt"
-//}
-//check.dependsOn ktlint
-//
-//task ktlintFormat(type: JavaExec, group: "formatting") {
-//    description = "Fix Kotlin code style deviations."
-//    mainClass.set("com.pinterest.ktlint.Main")
-//    classpath = configurations.ktlint
-//
-//    args "-F", "src/**/*.kt"
+
 //}
